// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-8 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-10 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-10 {
  margin-bottom: inherit;
}

.emotion-12 {
  display: inline-block;
  margin-bottom: calc(4px * 2);
}

.emotion-14 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media (min-width: 600px) {
  .emotion-14 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-14:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-14::-webkit-input-placeholder {
  color: rgba(30, 30, 30, 0.62);
}

.emotion-14::-moz-placeholder {
  opacity: 1;
  color: rgba(30, 30, 30, 0.62);
}

.emotion-14:-ms-input-placeholder {
  color: rgba(30, 30, 30, 0.62);
}

.is-dark-theme .emotion-14::-webkit-input-placeholder {
  color: rgba(255, 255, 255, 0.65);
}

.is-dark-theme .emotion-14::-moz-placeholder {
  opacity: 1;
  color: rgba(255, 255, 255, 0.65);
}

.is-dark-theme .emotion-14:-ms-input-placeholder {
  color: rgba(255, 255, 255, 0.65);
}

.emotion-34 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-34 {
    transition-duration: 0ms;
  }
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-44>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-44>* {
  min-width: 0;
}

.emotion-44:first-of-type {
  border-top: none;
}

.emotion-44:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-44:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        General evidence
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="inspector-textarea-control-0"
            >
              Product description
            </label>
            <textarea
              class="components-textarea-control__input emotion-14 emotion-15"
              id="inspector-textarea-control-0"
              rows="4"
            />
          </div>
        </div>
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="inspector-text-control-0"
            >
              Customer name
            </label>
            <input
              class="components-text-control__input"
              id="inspector-text-control-0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="form-file-upload-base-control-customer_signature"
            >
              Customer signature
            </label>
            <div
              class="components-drop-zone"
              data-is-drop-zone="true"
            />
            <div
              class="file-upload"
            >
              <div
                class="components-form-file-upload"
              >
                <button
                  class="components-button is-secondary has-text has-icon"
                  id="form-file-upload-customer_signature"
                  type="button"
                >
                  <svg
                    class="gridicon gridicons-add-outline"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm5 9h-4V7h-2v4H7v2h4v4h2v-4h4v-2z"
                      />
                    </g>
                  </svg>
                  Upload file
                </button>
                <input
                  accept=".pdf, image/png, image/jpeg"
                  data-testid="form-file-upload-input"
                  style="display: none;"
                  type="file"
                />
              </div>
              
            </div>
          </div>
        </div>
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="inspector-text-control-1"
            >
              Service date
            </label>
            <input
              class="components-text-control__input"
              id="inspector-text-control-1"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-34 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-34 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <p>
          When you submit your evidence, we'll format it and send it to the cardholder's bank, then email you once the dispute has been decided.
        </p>
        <p>
          <strong>
            Evidence submission is final.
          </strong>
           
          You can also save this evidence for later instead of submitting it immediately.
           
          <strong>
            We will automatically submit any saved evidence at the due date.
          </strong>
        </p>
      </div>
      <div
        class="components-flex components-card__footer components-card-footer emotion-44 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardFooter"
      >
        <div>
          <button
            class="components-button is-primary"
            type="button"
          >
            Submit evidence
          </button>
          <button
            class="components-button is-secondary"
            type="button"
          >
            Save for later
          </button>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-34 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-34 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-8 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-10 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-10 {
  margin-bottom: inherit;
}

.emotion-12 {
  display: inline-block;
  margin-bottom: calc(4px * 2);
}

.emotion-26 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-26 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        General evidence
      </div>
      <div
        class="components-card__body components-card-body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="inspector-text-control-2"
            >
              Customer name
            </label>
            <input
              class="components-text-control__input"
              disabled=""
              id="inspector-text-control-2"
              type="text"
              value="No information submitted"
            />
          </div>
        </div>
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="form-file-upload-base-control-customer_signature"
            >
              Customer signature
            </label>
            <span
              class="upload-message"
            >
              : Evidence file was not uploaded
            </span>
          </div>
        </div>
        <div
          class="components-base-control emotion-8 emotion-9"
        >
          <div
            class="components-base-control__field emotion-10 emotion-11"
          >
            <label
              class="components-base-control__label emotion-12 emotion-13"
              for="inspector-text-control-3"
            >
              Service date
            </label>
            <input
              class="components-text-control__input"
              disabled=""
              id="inspector-text-control-3"
              type="text"
              value="Date not submitted"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-26 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-26 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Dispute evidence page renders correctly 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 6) calc(4px * 8);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-8 {
    transition-duration: 0ms;
  }
}

.emotion-20 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-22 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-22 {
  margin-bottom: inherit;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  height: 100%;
  position: relative;
  border-radius: 2px;
  padding-top: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-25>*+*:not( marquee ) {
  margin-top: 0;
}

.emotion-25>* {
  min-height: 0;
}

.emotion-28 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  display: block;
  max-width: calc( 100% - 10px );
}

.emotion-30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border-radius: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  background-color: #fff;
  margin: 0!important;
  width: 100%;
}

.emotion-32.emotion-32.emotion-32 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: transparent;
  box-sizing: border-box;
  border: none;
  box-shadow: none!important;
  color: #000;
  display: block;
  font-family: inherit;
  margin: 0;
  width: 100%;
  font-size: 16px;
  height: 30px;
  line-height: 1;
  min-height: 30px;
  padding-left: 8px;
  padding-right: 24px;
}

@media ( min-width: 600px ) {
  .emotion-32.emotion-32.emotion-32 {
    font-size: 13px;
  }
}

.emotion-34 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-36 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 4px;
  pointer-events: none;
  position: absolute;
  top: 0;
  right: 0;
}

.emotion-36 svg {
  display: block;
}

.emotion-38.emotion-38.emotion-38 {
  box-sizing: border-box;
  border-radius: inherit;
  bottom: 0;
  left: 0;
  margin: 0;
  padding: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
  border-color: #757575;
  border-style: solid;
  border-width: 1px;
  padding-left: 2px;
}

<div>
  <div
    class="wcpay-dispute-evidence woocommerce-payments-page is-narrow"
    id=""
  >
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Challenge dispute
        </div>
        <div
          class="components-card__body components-card-body emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="wcpay-dispute-info"
          >
            <div
              class="wcpay-dispute-info-item"
            >
              <span
                class="wcpay-dispute-info-key"
              >
                Dispute date: 
              </span>
              <span
                class="wcpay-dispute-info-value"
              >
                Nov 1, 2019
              </span>
            </div>
            <div
              class="wcpay-dispute-info-item"
            >
              <span
                class="wcpay-dispute-info-key"
              >
                Disputed amount: 
              </span>
              <span
                class="wcpay-dispute-info-value"
              >
                $10.00
              </span>
            </div>
            <div
              class="wcpay-dispute-info-item"
            >
              <span
                class="wcpay-dispute-info-key"
              >
                Respond by: 
              </span>
              <span
                class="wcpay-dispute-info-value"
              >
                Nov 8, 2019 - 2:46AM
              </span>
            </div>
            <div
              class="wcpay-dispute-info-item"
            >
              <span
                class="wcpay-dispute-info-key"
              >
                Reason: 
              </span>
              <span
                class="wcpay-dispute-info-value"
              >
                Transaction unauthorized
              </span>
            </div>
            <div
              class="wcpay-dispute-info-item"
            >
              <span
                class="wcpay-dispute-info-key"
              >
                Transaction ID: 
              </span>
              <span
                class="wcpay-dispute-info-value"
              >
                <a
                  data-link-type="wc-admin"
                  href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-8 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-8 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
    <div
      class="components-surface components-card emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          Product type
        </div>
        <div
          class="components-card__body components-card-body emotion-6 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="components-base-control emotion-20 emotion-21"
          >
            <div
              class="components-base-control__field emotion-22 emotion-23"
            >
              <div
                class="components-flex components-select-control emotion-24 emotion-25 emotion-1"
                data-wp-c16t="true"
                data-wp-component="Flex"
              >
                <div
                  class="components-flex-item emotion-27 emotion-28 emotion-1"
                  data-wp-c16t="true"
                  data-wp-component="FlexItem"
                />
                <div
                  class="components-input-control__container emotion-30 emotion-31"
                >
                  <select
                    class="components-select-control__input emotion-32 emotion-33"
                    data-testid="dispute-challenge-product-type-selector"
                    id="inspector-select-control-0"
                  >
                    <option
                      disabled=""
                      value=""
                    >
                      Select one…
                    </option>
                    <option
                      value="physical_product"
                    >
                      Physical product
                    </option>
                    <option
                      value="digital_product_or_service"
                    >
                      Digital product or service
                    </option>
                    <option
                      value="offline_service"
                    >
                      Offline service
                    </option>
                    <option
                      value="multiple"
                    >
                      Multiple product types
                    </option>
                  </select>
                  <span
                    class="components-input-control__suffix emotion-34 emotion-35"
                  >
                    <div
                      class="emotion-36 emotion-37"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                    </div>
                  </span>
                  <div
                    aria-hidden="true"
                    class="components-input-control__backdrop emotion-38 emotion-39"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-8 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-8 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
